--- a/index.html
+++ b/index.html
@@ -47,18 +47,27 @@
         // }, function(error){  
         //   console.log(error.name || error);  
         // });  
-
-        if (navigator.getUserMedia) {
-          navigator.getUserMedia({"video":true}, function (stream) {
-          video.src = stream;
-          video.play();
+          if(navigator.mediaDevices){
+            navigator.mediaDevices.getUserMedia({video: true })
+            .then(function(stream) {
+              /* 使用这个stream stream */
+              video.src = stream;
+              video.play();
+            })
+            .catch(function(err) {
+              /* 处理error */
+            });
+          }else if (navigator.getUserMedia) {
+            navigator.getUserMedia({"video":true}, function (stream) {
+            video.src = stream;
+            video.play();
           }, function(error){  
            console.log(error.name || error);  
           });
-        } else if (navigator.webkitGetUserMedia) {
-          navigator.webkitGetUserMedia({"video":true}, function (stream) {
-          video.src = window.webkitURL.createObjectURL(stream);
-          video.play();
+          } else if (navigator.webkitGetUserMedia) {
+            navigator.webkitGetUserMedia({"video":true}, function (stream) {
+            video.src = window.webkitURL.createObjectURL(stream);
+            video.play();
           }, function(error){  
            console.log(error.name || error);  
           });
