--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         //   console.log(error.name || error);  
         // });  
           if(navigator.mediaDevices){
+            alert('navigator.mediaDevices');
             navigator.mediaDevices.getUserMedia({ video:true})
             .then(function(stream) {
               /* 使用这个stream stream */
@@ -62,21 +63,23 @@
               /* 处理error */
             });
           }
-          // else if (navigator.getUserMedia) {
-          //   navigator.getUserMedia({audio: true, video: { facingMode: { exact: "environment" } }}, function (stream) {
-          //   video.src = stream;
-          //   video.play();
-          // }, function(error){  
-          //  console.log(error.name || error);  
-          // });
-          // } else if (navigator.webkitGetUserMedia) {
-          //   navigator.webkitGetUserMedia({audio: true, video: { facingMode: { exact: "environment" } }}, function (stream) {
-          //   video.src = window.webkitURL.createObjectURL(stream);
-          //   video.play();
-          // }, function(error){  
-          //  console.log(error.name || error);  
-          // });
-          // }
+          else if (navigator.getUserMedia) {
+            alert('navigator.getUserMedia');
+            navigator.getUserMedia({audio: true, video: { facingMode: { exact: "environment" } }}, function (stream) {
+            video.src = stream;
+            video.play();
+          }, function(error){  
+           console.log(error.name || error);  
+          });
+          } else if (navigator.webkitGetUserMedia) {
+            alert('navigator.webkitGetUserMedia');
+            navigator.webkitGetUserMedia({audio: true, video: { facingMode: { exact: "environment" } }}, function (stream) {
+            video.src = window.webkitURL.createObjectURL(stream);
+            video.play();
+          }, function(error){  
+           console.log(error.name || error);  
+          });
+          }
         
 
       }  
